Fixed if/else section to pull proper values from radio buttons.
Co-authored-by: Kim Brannian <brannian@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,16 @@
-#lionfacts, #tigerfacts, #bearfacts {
+#lionfacts {
+  display: none;
+}
+
+#tigerfacts {
+  display: none;
+}
+
+#bearfacts {
+  display: none;
+}
+
+#default {
   display: none;
 }
 
